fix alignment

--- a/style.css
+++ b/style.css
@@ -141,13 +141,11 @@ h2 {
   color: #a86e01;
   margin-top: 10px;
   margin-bottom: 10px;
-  text-align: center;
 }
 
 p {
   font-size: 16px;
   margin-bottom: 20px;
-  text-align: center;
 }
 
 .contact-list {
